# cmake-template

./: CMakeLists.txt  README.md
include/: Class.h
src/: Class.cpp
test/: CMakeLists.txt  main_test.cpp
